--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "morgan": "^1.9.0",
+    "nodemon": "^1.18.9",
     "uuid": "^3.3.2"
   },
   "keywords": [
