--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog-app-challenge-starter-files",
+  "name": "blog-app",
   "version": "0.0.1",
   "description": "Shopping list app to demo 'the modern classic'",
   "main": "server.js",
