--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "morgan": "^1.9.0",
-    "nodemon": "^1.18.9",
     "uuid": "^3.3.2"
   },
   "keywords": [
@@ -22,7 +21,8 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.9"
   },
   "repository": {
     "type": "git",
