--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "mongoose": "^5.4.7",
     "morgan": "^1.9.0",
     "uuid": "^3.3.2"
   },
